tests/NormalTests/paczka1/small_fuzzy/19985099.err
Error in line 1: 8gU6DZQ A495 10,13
Error in line 4: KIrigB SR44 15,R
Error in line 6: 9NfVd S644 67,1
Error in line 13: 9NfVd S364 24,5
